@@ -5,7 +5,7 @@ plugins {
     id "com.diffplug.spotless" version "5.15.1"
     id "com.github.ben-manes.versions" version "0.39.0"
     id "com.github.spotbugs" version "4.7.6"
-    id "org.springframework.boot" version "2.5.4"
+    id "org.springframework.boot" version "2.5.5"
     id "org.liquibase.gradle" version "2.0.4"
     id "org.asciidoctor.jvm.convert" version "3.3.2"
     id "com.moowork.node" version "1.3.1"
@@ -20,14 +20,15 @@ apply plugin: "com.moowork.node"
 apply plugin: "pmd"
 apply plugin: "jacoco"
 
-def javaVersion = JavaVersion.VERSION_11
-def springBootVersion = "2.5.4"
+def javaVersion = JavaVersion.VERSION_17
+def springBootVersion = "2.5.5"
 def springfoxVersion = "3.0.0"
 def joinfacesVersion = "4.4.6"
 ext["snippetsDir"] = "build/generated-snippets"
 
 version = gitVersion()
 group = "demo"
+
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
 
@@ -82,7 +83,7 @@ dependencies {
     implementation("io.springfox:springfox-swagger-ui:$springfoxVersion")
     implementation("org.joinfaces:primefaces-spring-boot-starter:$joinfacesVersion")
     implementation("org.primefaces.themes:bootstrap:1.0.10")
-    implementation("de.ruedigermoeller:fst:2.57")
+    implementation("de.ruedigermoeller:fst:3.0.3")
     implementation("org.postgresql:postgresql")
     // https://mvnrepository.com/artifact/de.appelgriepsch.logback/logback-gelf-appender
     implementation group: "de.appelgriepsch.logback", name: "logback-gelf-appender", version: "1.5"
@@ -181,17 +182,20 @@ liquibase {
     }
 }
 
-jacoco.toolVersion = "0.8.3"
+jacoco.toolVersion = "0.8.7"
 jacocoTestReport {
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 }
 
-spotbugs.toolVersion = "3.1.12"
+spotbugs {
+    toolVersion = "4.4.1"
+    excludeFilter = layout.projectDirectory.file('spotbugs-exclude.xml')
+}
 pmd {
-    toolVersion = "6.15.0"
+    toolVersion = "6.21.0"
     ruleSetFiles(new File("pmd.ruleset.xml"))
     ruleSets = []
 }
@@ -217,8 +221,8 @@ task h2Tcp(type: JavaExec) {
 }
 
 node {
-        // Version of node to use.
-        version = '14.13.1'
+    // Version of node to use.
+    version = '14.13.1'
 }
 
 task webpack(type: NodeTask, dependsOn: "npmInstall") {
@@ -273,6 +277,18 @@ spotless {
 
 tasks.withType(Test) {
     useJUnitPlatform()
+    doFirst {
+        jvmArgs = [
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.math=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/java.text=ALL-UNNAMED',
+                '--add-opens=java.sql/java.sql=ALL-UNNAMED'
+
+        ]
+    }
     testLogging {
         // set options for log level LIFECYCLE
         events "passed", "skipped", "failed", /*"standardOut",*/ "standardError"
